log
Wed, Mar 26, 2025 11:47:51 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025 11:53:20 PM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
87e9ba5
Thu, Mar 27, 2025 12:07:06 AM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:9: error: 'List {aka struct List}' has no member named 'cuurent'; did you mean 'current'?
     list->cuurent = list->head;
         ^~
list.c:43:9: error: expected expression before ')' token
     if ()
         ^
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
aa0a42c
